--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,9 +1,9 @@
 <md-card class="example-card">
-  <img md-card-image src="https://images-na.ssl-images-amazon.com/images/M/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_QL50_SY1000_CR0,0,665,1000_AL_.jpg">
+  <img md-card-image src="{{movie.img}}">
   <md-card-content>
-    <h3>Matrix</h3>
+    <h3>{{movie.name}}</h3>
     <p>
-      A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.
+      {{movie.des}}
     </p>
   </md-card-content>
   </md-card>
