movie Detail Display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-movie-card [movie]="eachMovie" *ngFor="let eachMovie of movies"></app-movie-card>
 </div>
 <ng-template #loading>Loading...</ng-template>
+<app-movie-detail [movieDetail]="movieDetail$ | async"></app-movie-detail>
