movie Detail console log id

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<md-card class="example-card">
+<md-card class="example-card"  (click)="selectMovie()">
   <img md-card-image src="{{movie.img}}">
   <md-card-content>
     <h3>{{movie.name}}</h3>
