--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,4 +1,5 @@
-<md-grid-list cols="2" rowHeight="200px" gutterSize="30px"  >
+
+<md-grid-list cols="2" rowHeight="200px" gutterSize="30px"  *ngIf="movieDetail">
   <md-grid-tile [rowspan]="3" >
     <img class="mat-elevation-z10" src="{{movieDetail.img}}"alt="Sample image for first version of blog listing">
   </md-grid-tile>
