--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,38 @@
 <md-toolbar color="primary">{{title}}</md-toolbar>
-<div *ngIf="movies$ | async as movies; else loading"  fxLayout="row">
-<app-movie-card [movie]="eachMovie" *ngFor="let eachMovie of movies" (movieId)="setMovieId($event)"></app-movie-card>
+
+<div class="demo-nav-bar">
+  <nav md-tab-nav-bar  aria-label="main navigation links">
+
+    <!--Just the Tabs-->
+    <!--<a md-tab-link-->
+    <!--*ngFor="let tabLink of tabLinks; let i = index"-->
+    <!--[active]="activeLinkIndex === i"-->
+    <!--(click)="activeLinkIndex = i">-->
+    <!--{{tabLink.label}}-->
+    <!--</a>-->
+
+
+    <!--Link router Link with Tabs Sort of works-->
+    <!--<a md-tab-link-->
+       <!--*ngFor="let tabLink of tabLinks; let i = index"-->
+       <!--[routerLink]="tabLink.link"-->
+       <!--[active]="activeLinkIndex === i"-->
+       <!--(click)="activeLinkIndex = i">-->
+      <!--{{tabLink.label}}-->
+    <!--</a> -->
+
+    <!--RouterLink active styling-->
+    <a md-tab-link
+       *ngFor="let tabLink of tabLinks; let i = index"
+       [routerLink]="tabLink.link"
+       routerLinkActive #rla="routerLinkActive" [active]="rla.isActive"
+       (click)="activeLinkIndex = i">
+      {{tabLink.label}}
+    </a>
+
+
+  </nav>
+  <section class="content" fxLayout="column" fxLayoutAlign="center center">
+    <router-outlet></router-outlet>
+  </section>
 </div>
-<ng-template #loading>Loading...</ng-template>
-<app-movie-detail [movieDetail]="movieDetail$ | async"></app-movie-detail>
