--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,14 +1,14 @@
 
-<md-grid-list cols="2" rowHeight="200px" gutterSize="30px"  *ngIf="movieDetail">
-  <md-grid-tile [rowspan]="3" >
-    <img class="mat-elevation-z10" src="{{movieDetail.img}}"alt="Sample image for first version of blog listing">
-  </md-grid-tile>
-  <md-grid-tile [rowspan]="2">
-    <ul fxLayout="column" fxflex>
-      <li ><h2><strong>{{movieDetail.name}}</strong></h2></li>
-      <li  ><p>{{movieDetail.story}}</p></li>
-         <li ><button md-raised-button color="primary">Rate</button></li>
-    </ul>
-  </md-grid-tile>
+<md-card *ngIf="movieDetail" class="movie-detail">
 
-</md-grid-list>
+    <img md-card-image  src="{{movieDetail.img}}"alt="{{movieDetail.name}}">
+
+  <md-card-content>
+
+     <h2><strong>{{movieDetail.name}}</strong></h2>
+      <p>{{movieDetail.story}}</p>
+       <button md-raised-button color="primary">Rate</button>
+
+  </md-card-content>
+
+</md-card>
