Routing and navigation working

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,4 +1,4 @@
-
+<a [routerLink]="['/movie-section',1]">Frist movie</a>
 <md-card *ngIf="movieDetail" class="movie-detail">
 
     <img md-card-image  src="{{movieDetail.img}}"alt="{{movieDetail.name}}">
